<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SyncContact</string>
    <string name="app_name_help">Help</string>
    <string name="app_name_sync">Synchronization</string>
    <string name="app_name_contact">Contacts</string>
    <string name="app_name_server">Server</string>
    <string name="app_name_remove">Remove</string>
    <string name="app_name_edit">Edit</string>
    <string name="app_name_info">Info</string>
    <string name="app_name_info_ldap">Info import contacts</string>
    <string name="app_name_info_merge">Info merge contacts</string>
    <string name="app_name_info_sync">Info synchronization</string>
    <string name="app_name_merge">Merge contacts</string>
    <string name="app_name_settings">Settings</string>
    <string name="app_name_ldap_contact">Cloud contacts</string>
    <string name="app_name_select_contact">Select contacts</string>

    <!-- Default text from activities -->
    <string name="def_group">Groups</string>
    <string name="def_contact">Contacts</string>
    
    <!-- ProgressBar -->
    <string name="progress_loading">Loading&#8230;</string>
    <string name="progress_loading_text">Loading data from database.</string>
    <string name="progress_downloading">Downloading&#8230;</string>
    <string name="progress_downloading_text">Downloading data from server.</string>
    <string name="progress_removing">Removing&#8230;</string>
    <string name="progress_removing_text">Removing account/connection</string>
    <string name="progress_synchronizing">Synchronizing&#8230;</string>
    <string name="progress_synchronizing_text">Synchronizing local contacts with server\'s contacts.</string>
    <string name="progress_importing">Importing&#8230;</string>
    <string name="progress_importing_text">Importing new server\'s contacts to local storage.</string>
    <string name="progress_saving">Saving&#8230;</string>
    <string name="progress_exporting">Exporting&#8230;</string>
    <string name="progress_exporting_text">Exporting contacts to previous accounts.</string>
    <string name="progress_authenticating">Authenticating&#8230;</string>
    <string name="progress_testing_connection">Testing connection&#8230;</string>
    
    <!-- Toast -->
    <string name="toast_saved">Change saved.</string>
    <string name="toast_imported">Was imported: </string>
    <string name="toast_imported_contacts"> contacts.</string>
    <string name="toast_exported">Was exported: </string>
    <string name="toast_exported_contacts"> contacts.</string>
    <string name="toast_tested">Test connection successfully.</string>
    
    <!-- Menu -->
    <string name="menu_sync">Synchronization</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_test_connections">Test connections</string>
    <string name="menu_refresh">Refresh contacts</string>
    <string name="menu_select">Select all</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_add_people">Add people</string>
    <string name="menu_show_all">Show server\'s contacs all</string>
    <string name="menu_show_imported">Show only impoted contacts</string>
    <string name="menu_save">Save</string>
    <string name="menu_export">Export contact</string>
    
    <!-- Button -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_accept">Accept</string>
    <string name="button_show">Show</string>
    
    <!-- Dialog -->
    <string name="dialog_error">Error</string>
    <string name="dialog_error_connection">Can not connect to server. Chech internet connection or login credentials.\n \n</string>
    <string name="dialog_cert">Untrusted certificate.</string>
    <string name="dialog_error_text">Error connection</string>
    
    <!-- MainActivity -->
    <string name="main_contact">Contacts list</string>
    <string name="main_sync">Synchronization</string>
    <string name="main_import">Import contacts</string>
    <string name="main_server">Server</string>
    <string name="main_export_contact">Export contacts</string>
    <string name="main_export_contact_text">Do you really want export all contacts into previous account? 
        For using this application contacts must be in \'syncContact.cz\' account.</string>

    <!-- SyncAuthenticatorActivity -->
    <string name="add_account_main">Create new connection to LDAP Server</string>
    <string name="edit_account_main">Edit connection of LDAP Server</string>
    <string name="add_account_host">Host</string>
    <string name="add_account_encryption">Encryption</string>
    <string name="add_account_port">Port</string>
    <string name="add_account_dn">Bind DN</string>
    <string name="add_account_name">Bind DN</string>
    <string name="add_account_password">Bind Password</string>
    <string name="add_account">Save connection</string>
    <string name="add_account_back">Back</string>

    <!-- WelcomeActivity -->
    <string name="welcome_welcome">Welcome</string>
    <string name="welcome_info">You started the application SyncContact, the application is designed for synchronization your contacts.</string>
    <string name="welcome_first">This tutorial helps you for creating connections settings and selecting contacts for synchronization.</string>
    <string name="welcome_second">First, you must add new server.</string>
    <string name="welcome_add_server">Add new server</string>

    <!-- SynchronizationActivity -->
    <string name="sync_info">You can synchornization manualy</string>
    <string name="sync_last">Last synchorization:</string>
    <string name="sync_button">Synchornization</string>

    <!-- RemoveActivity -->
    <string name="remove_info">Read closely</string>
    <string name="remove_text">When removed this server, will be removed account from your mobile. 
        For using this application, you must create new server\'s connection
    </string>

    <!-- ServerActivity -->
    <string name="server_info">Server connection</string>
    <string name="server_dn">Distinguished name:</string>
    <string name="server_address">Address:</string>
    <string name="server_port">Port:</string>
    <string name="server_security">Secutity:</string>
    <string name="server_edit">Edit server</string>
    <string name="server_remove">Remove server</string>

    <!-- Info - Activity -->
    <string name="info_server_added">Server added successfully</string>
    <string name="info_button">Go to select contacts</string>
    <string name="info_text">Now you must select contact or group, which should be synchronized.</string>
    <string name="info_warning">Warning: Contacts which will selected must be moved to new account. 
        It will be done automatic. Some application can have problems with these contacts. 
        Before uninstall this application you must exported contacts to previous account manualy. 
        This options will be in main menu like &quot;export contact back&quot;.
    </string>
    
    <!-- Info - Merge - Activity -->
    <string name="info_merge_head">Contacts selected</string>
    <string name="info_merge_button">Go to merge contacts</string>
    <string name="info_merge_text">After selected contacts you must merge local contacts and contacts on server. 
        The next window are showing contacs, which look like same. 
        Check them. Contacts marked as same, will be merged.
    </string>
    <string name="info_merge_text_2">No marked contacts will be created on server.</string>
    <string name="info_merge_button_skip">Skip</string>
    
    <!-- Info - Server Contact - Activity -->
    <string name="info_server_head">Contacts merged</string>
    <string name="info_server_button">Go to import contacts</string>
    <string name="info_server_text">The selected local contacts are merged with server contacts. 
        Now you can import new contacts to the local storage from the server.
        The next window are showing contacts on the server. 
        The selected contacts are already on the local storage. 
        If you want add new contacts, select them and click on button Import
    </string>
    <string name="info_server_text_2">Automatically marked contacts let them marked.</string>
    
    <!-- GroupFragmnet -->
    <string name="group_toast">Group is empty.</string>
    <string name="group_select_all">Select all</string>
    <string name="group_select_no">Select nothing</string>
    <string name="group_button">Select contacts</string>
    <string name="group_number_of">Number of contact: </string>
    
    
    
    <string name="add_new_group_text">Name of new group:</string>
    <string name="string_empty"></string>
    
    <!-- Help -->
    <string name="help">Help</string>
    <string name="help_contact_list">List of contacts or groups for synchronization</string>

</resources>
