<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_help">
    </item>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="102"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_settings">
    </item>
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_action_export"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/menu_export">
    </item>

</menu>