<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent" 
  android:layout_height="match_parent"
  android:id="@+id/main_activity"
  android:background="#00000000" >
  
  <Button
    android:paddingTop="52dip"
    android:drawablePadding="-15sp"
    android:background="@drawable/main_button1"
    android:id="@+id/button_map"
    android:text="@string/main_contact"
    android:onClick="startContactActivity"
    android:drawableTop="@drawable/map"
    android:layout_width="160dip" 
    android:layout_height="210dip">
  </Button>
  
  <Button
    android:id="@+id/button_show_sight"
    android:layout_width="match_parent"
    android:layout_height="160dip"
    android:layout_alignParentRight="true"
    android:layout_alignTop="@+id/button_map"
    android:layout_toRightOf="@+id/button_map"
    android:background="@drawable/main_button"
    android:drawablePadding="-15sp"
    android:drawableTop="@drawable/show"
    android:onClick="startSyncActivity"
    android:paddingTop="32sp"
    android:text="@string/main_sync" >
  </Button>

  <Button
    android:background="@drawable/main_button"
    android:paddingTop="32sp"
    android:drawablePadding="-15sp"
    android:drawableTop="@drawable/help"
    android:onClick="startLDAPContactsActivity" 
    android:text="@string/main_help" 
    android:layout_below="@+id/button_map" 
    android:id="@+id/button_help"
    android:layout_alignLeft="@+id/button_map" 
    android:layout_height="160dip" 
    android:layout_width="160dip">
  </Button>

  <Button
    android:id="@+id/button_add_sight"
    android:layout_width="match_parent"
    android:layout_height="210dip"
    android:layout_below="@+id/button_show_sight"
    android:layout_toRightOf="@+id/button_help"
    android:background="@drawable/main_button1"
    android:drawablePadding="-15sp"
    android:drawableTop="@drawable/add"
    android:onClick="startServerActivity"
    android:paddingTop="52sp"
    android:text="@string/main_server" >
  </Button>
  
</RelativeLayout>