<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical" >
  

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="0dip"
    android:layout_weight="1"
    android:orientation="vertical" >
    
    <ScrollView
      android:id="@+id/scrollView1"
      android:layout_width="match_parent"
      android:layout_height="match_parent" >

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
          android:id="@+id/textView1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:paddingBottom="@dimen/activity_horizontal_margin"
          android:paddingTop="@dimen/activity_horizontal_margin"
          android:text="@string/add_account_main"
          android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
          android:layout_width="fill_parent"
          android:layout_height="1dip"
          android:background="#ffffffff" />
        
        <EditText
          android:id="@+id/add_account_host_value"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/add_account_host"
          android:inputType="textPersonName"
          android:paddingTop="@dimen/margin_20" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_20" >
        
          <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_account_encryption" />

          <Spinner
            android:id="@+id/add_account_encryption_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>
        

 
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_account_list_value"
            android:orientation="vertical" >
        </LinearLayout>

      </LinearLayout>
    </ScrollView>
  </LinearLayout>
    
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageButton
      android:background="@drawable/loadimagebutton"  
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:contentDescription="@string/add_account_back"/>
    
    <ImageButton
      android:background="@drawable/loadimagebutton"  
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:onClick="getLDAPServerDetails"
      android:contentDescription="@string/add_account_next"/>
  </LinearLayout>

</LinearLayout>